[mod]:修改项目名称为智课云培训管理系统v0.1

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="培训管理系统 - 支持招生、试听、排课、消课、通知、点评、数据分析" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>培训管理系统</title>
+    <title>智课云培训管理系统v0.1</title>
   </head>
   <body>
     <noscript>您需要启用JavaScript来运行此应用程序。</noscript>
